# monger

./: .travis.yml  Cargo.toml  README.md  rustfmt.toml
monger/: Cargo.toml
monger-core/: Cargo.toml
monger-core/src/: client.rs  error.rs  fs.rs  lib.rs  process.rs  url.rs  util.rs
monger-core/src/os/: arch.rs  macos.rs  mod.rs  windows.rs
monger-core/src/os/linux/: debian.rs  mod.rs  rhel.rs  suse.rs  ubuntu.rs
monger/src/: dispatch.rs  main.rs  util.rs
src/: client.rs  dispatch.rs  error.rs  file.rs  fs.rs  main.rs  monger.rs  process.rs  tags.rs  url.rs  util.rs
src/os/: arch.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/os/linux/: amazon.rs  debian.rs  mod.rs  rhel.rs  suse.rs  ubuntu.rs
