[package]
authors = ["Saghm Rossi <saghmrossi@gmail.com>"]
description = "MongoDB version manager"
edition = "2018"
license = "Apache-2.0"
name = "monger"
repository = "https://github.com/saghm/monger"
version = "0.6.3"
readme = "README.md"

[dependencies]
clap = "2.32.0"
error-chain = "0.12.0"
lazy_static = "1.2.0"
regex = "1.1.0"
reqwest = "0.9.9"
rs-release = "0.1.7"
semver = "0.9.0"
hyperx = "0.14.0"
dirs = "1.0.4"
soup = "0.3.0"
