[package]
authors = ["Saghm Rossi <saghmrossi@gmail.com>"]
description = "MongoDB version manager"
edition = "2018"
license = "Apache-2.0"
name = "monger"
repository = "https://github.com/saghm/monger"
version = "0.7.0"
readme = "README.md"

[dependencies]
clap = "2.33.0"
error-chain = "0.12.1"
lazy_static = "1.3.0"
regex = "1.1.6"
reqwest = "0.9.17"
rs-release = "0.1.7"
semver = "0.9.0"
hyperx = "0.15.0"
dirs = "1.0.5"
soup = "0.4.1"
