[package]
authors = ["Saghm Rossi <saghmrossi@gmail.com>"]
description = "MongoDB version manager"
edition = "2018"
license = "Apache-2.0"
name = "monger-core"
repository = "https://github.com/saghm/monger"
version = "0.9.0"

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.1"
reqwest = { version = "0.9.20", features = [ "rustls-tls" ], default-features = false }
rs-release = "0.1.7"
semver = "0.9.0"
hyperx = "0.15.1"
dirs = "2.0.2"
soup = "0.4.1"
err-derive = "0.2.0"
