[package]
authors = ["Saghm Rossi <saghmrossi@gmail.com>"]
description = "MongoDB version manager"
edition = "2018"
license = "Apache-2.0"
name = "monger-core"
repository = "https://github.com/saghm/monger"
version = "0.14.0"

[dependencies]
lazy_static = "1.4.0"
regex = "1.4.1"
reqwest = { version = "0.10.8", features = [ "blocking", "gzip", "rustls-tls" ], default-features = false }
rs-release = "0.1.7"
semver = "0.11.0"
hyperx = "1.2.0"
dirs = "3.0.1"
soup = "0.5.0"
thiserror = "1.0.21"
