[package]
authors = ["Saghm Rossi <saghmrossi@gmail.com>"]
description = "MongoDB version manager"
edition = "2018"
license = "Apache-2.0"
name = "monger"
repository = "https://github.com/saghm/monger"
version = "0.13.0"
readme = "../README.md"

[dependencies]
anyhow = "1.0.32"
monger-core = "0.13.0" 
structopt = "0.3.16"

[dependencies.self_update]
version = "0.19.0"
default-features = false
features = ["archive-tar", "compression-flate2", "rustls"]
