[package]
authors = ["Saghm Rossi <saghmrossi@gmail.com>"]
description = "MongoDB version manager"
edition = "2018"
license = "Apache-2.0"
name = "monger"
repository = "https://github.com/saghm/monger"
version = "0.13.1"
readme = "../README.md"

[dependencies]
anyhow = "1.0.33"
#monger-core = "0.13.1"
monger-core = { path = "../monger-core" }
structopt = "0.3.20"
rand = "0.7.3"

[dependencies.self_update]
version = "0.20.0"
default-features = false
features = ["archive-tar", "compression-flate2", "rustls"]
